--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.2",
+    "@types/dotenv": "^8.2.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5"
   },
