--- a/package.json
+++ b/package.json
@@ -11,12 +11,24 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
     "@nuxtjs/pwa": "^3.0.2",
+    "@nuxtjs/toast": "^3.3.0",
+    "@pixiv/three-vrm": "^0.3.5",
     "@types/dotenv": "^8.2.0",
+    "clmtrackr": "^1.1.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "nuxt": "^2.14.5",
+    "nuxt-fontawesome": "^0.4.0",
+    "skyway-js": "^3.0.1",
+    "stats.js": "^0.17.0",
+    "three": "^0.117.1",
+    "vue-js-modal": "^2.0.0-rc.3"
   },
   "devDependencies": {
+    "@nuxt/types": "~2.14.0",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "babel-eslint": "^10.1.0",
