--- a/package.json
+++ b/package.json
@@ -11,32 +11,35 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@nuxt/bridge": "^3.4.0",
     "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/toast": "^3.3.0",
+    "@nuxtjs/toast": "^3.3.1",
     "@nuxtjs/vuetify": "^1.12.3",
     "@pixiv/three-vrm": "^2.0.10",
+    "@skyway-sdk/room": "^1.6.2",
     "@types/dotenv": "^8.2.3",
+    "bootstrap": "^5.3.3",
     "clmtrackr": "^1.1.2",
-    "core-js": "^3.32.2",
-    "nuxt": "^2.14.12",
+    "core-js": "^3.36.0",
+    "nuxt": "^2.17.3",
     "nuxt-fontawesome": "^0.4.0",
-    "skyway-js": "^4.4.5",
+    "punycode": "^2.3.1",
     "stats.js": "^0.17.0",
-    "three": "^0.155.0",
-    "vue": "^2.6.12",
-    "vue-js-modal": "^2.0.0-rc.3"
+    "three": "^0.161.0",
+    "vue": "^2.7.16",
+    "vue-js-modal": "^2.0.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.23.10",
     "@nuxt/types": "~2.17.3",
     "@nuxtjs/eslint-config": "^12.0.0",
-    "@nuxtjs/eslint-module": "^3.1.0",
-    "@babel/eslint-parser": "^7.22.15",
-    "eslint": "^8.0.0",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "sass": "^1.64.2",
-    "sass-loader": "^10.2.0"
+    "sass": "^1.71.1",
+    "sass-loader": "^10.5.0"
   }
 }
